Data binding with components

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,7 +10,7 @@
 
         <div fxFlex>
             <md-grid-list cols="2" rowHeight="200px" >
-                <md-grid-tile *ngFor="let dish of dishes" [colspan]="1" [rowspan]="1">
+                <md-grid-tile *ngFor="let dish of dishes" (click) = "onSelect(dish)" [colspan]="1" [rowspan]="1">
                     <img height="200px" src={{dish.image}} alt={{dish.name}}>
                     <md-grid-tile-footer>
                         <h1 mdLine>{{dish.name | uppercase}}</h1>    
@@ -18,5 +18,5 @@
                 </md-grid-tile>
             </md-grid-list> 
         </div>  
-        <app-dish-detail></app-dish-detail>
+        <app-dish-detail [dish]="selectedDish"></app-dish-detail>
 </div>
