--- a/src/app/dish-detail/dish-detail.component.html
+++ b/src/app/dish-detail/dish-detail.component.html
@@ -18,6 +18,7 @@
 				{{dish.description}}
 			</md-card-content>
 			<md-card-actions align="start">
+				<button md-button (click)="goBack()">BACK</button>
 				<button md-button >Like</button>
 				<button md-button >Share</button>
 			</md-card-actions>
@@ -34,8 +35,4 @@
 			</md-list-item>
 		</md-list>
     </div>
-</div>
-
-<div fxFlex *ngIf="selectedDish">
-  
 </div>
