--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,7 +8,7 @@
 
     <div fxFlex>
         <md-grid-list cols="2" rowHeight="200px">
-            <md-grid-tile *ngFor="let dish of dishes" (click)="onSelect(dish)" [colspan]="1" [rowspan]="1">
+            <md-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
                 <img height="200px" src={{dish.image}} alt={{dish.name}}>
                 <md-grid-tile-footer>
                     <h1 mdLine>{{dish.name | uppercase}}</h1>
@@ -16,5 +16,5 @@
             </md-grid-tile>
         </md-grid-list>
     </div>
-    <app-dish-detail [dish]="selectedDish"></app-dish-detail>
+   
 </div>
